Actual STO routing between two points \o/

--- a/STO Buddy/Info.plist
+++ b/STO Buddy/Info.plist
@@ -31,6 +31,11 @@
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
+			<key>planibus.sto.ca</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
