--- a/STO Buddy/Info.plist
+++ b/STO Buddy/Info.plist
@@ -41,13 +41,15 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Your location is used when looking for nearby busses or finding routes from your current location.</string>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>Launch Screen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarHidden</key>
+	<false/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
